Correcting templates, looks better on mobile now

--- a/static_website/static/static_website/hero_properties.css
+++ b/static_website/static/static_website/hero_properties.css
@@ -123,6 +123,21 @@
 /*Extra Small Devices*/
 
 @media (min-device-width: 300px) and (max-device-width: 575.98px) {
+    #introButton {
+        display: none;
+    }
+    .hero-home-heading {
+        font-size: 2.2rem;
+    }
+    .hero-home-subheading {
+        font-size: 1.5rem;
+    }
+    .hero-small-font {
+        font-size: 2.2rem;
+    }
+    .hero-small-sub-font {
+        font-size: 1.5rem;
+    }
     div.hero-large-font {
         font-size: 30px;
         font-weight: 400;
@@ -132,27 +147,21 @@
         font-size: 20px;
         font-weight: 400;
     }
-    div.hero-small-font {
-        font-size: 25px;
-        font-weight: 400;
-        padding-bottom: 10px;
-    }
-    div.hero-small-sub-font {
-        font-size: 20px;
-        font-weight: 400;
-    }
     div.hero-text {
-        transform: translate(1rem, 1rem);
+        padding-top: 1rem;
+        transform: translate(0rem, 0rem);
     }
     div.hero-small-text {
         position: relative;
         transform: translateY(3.4rem);
     }
     div.hero-image {
-        height: 400px;
+        height: 13rem;
+        background-image: linear-gradient(to right, #56CCF2, #2F80ED);
     }
     div.hero-sub-image {
-        height: 350px;
+        height: 14rem;
+        background-image: linear-gradient(to right, #56CCF2, #2F80ED);
     }
 }
 
